# geometer

./: .devcontainer.json  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  renovate.json  setup.cfg  setup.py  taplo.toml  yamlfmt.yaml  zizmor.yml
.github/: release-please-config.json
.github/workflows/: build.yaml  mypy.yaml  mypy.yml  pre-commit.yaml  release-please.yaml  semantic-pr.yaml  tests.yaml
docs/: changelog.rst  conf.py  index.rst  quickstart.rst
docs/source/: geometer.rst  modules.rst
geometer/: __init__.py  __version__.py  base.py  collinear.py  crossratio.py  curve.py  exceptions.py  fields.py  graphics.py  manifold.py  operators.py  point.py  shapes.py  transformation.py
geometer/utils/: __init__.py  indexing.py  math.py  ops_dispatch.py  polynomial.py  typing.py
tests/: conftest.py  test_base.py  test_curve.py  test_fields.py  test_manifold.py  test_operators.py  test_point.py  test_shapes.py  test_transformation.py  test_utils.py
